fixed slide visibility issue

--- a/src/components/pendingCandidatesDatagrid/pendingCandidatesDatagrid.scss
+++ b/src/components/pendingCandidatesDatagrid/pendingCandidatesDatagrid.scss
@@ -91,6 +91,14 @@
   width: 100%;
   margin-top: 20px;
 
+  .zeroWidth{
+        position: absolute;
+          width: 0;
+          overflow-x: hidden;
+            transition: all ease-in-out 0.65s;
+         
+  }
+
   .slide {
     overflow: auto;
     display: flex;
