--- a/src/pages/manageClients/manageClients.scss
+++ b/src/pages/manageClients/manageClients.scss
@@ -14,6 +14,14 @@
       // background-color: red;
       // height: calc(100% - 0px);
 
+        .zeroWidthManageClients {
+            position: absolute;
+            width: 0;
+            overflow-x: hidden;
+            transition: all ease-in-out 0.65s;
+        
+          }
+
       .slide {
         position: absolute;
         overflow: auto;
@@ -28,7 +36,7 @@
         box-shadow: 1px 1px 40px 4px #6b6a6a6b;
         transition: all ease-in-out 0.65s;
         padding: 32px;
-        visibility: hidden;
+        // visibility: hidden;
 
         .slideMiddle {
           display: flex;
